# mandelbrot

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Mandlebrot.aps  Mandlebrot.dep  Mandlebrot.dsp  Mandlebrot.dsw  Mandlebrot.mak  Mandlebrot.ncb  Mandlebrot.opt  Mandlebrot.plg  README.md  app.cpp  app.h  bmp.cpp_dumb  color-palette.cpp  gradient.cpp  gradient.h  main.cpp  mandlebrot.cpp  old-app-params.h  old-load-save.h  pcx.cpp_dumb  point.h  pspbrwse.jbf  snapshot.pcx  types.h  utilities.h
bak/: Mandlebrot.bak  colorref.h  mandelbrot.cpp  old-app-params.h  old-app.cpp  old-app.h  old-load-save.h  point.h  rect.h  state-serializer.cpp  state-serializer.h  utilities.h
data/: mandvals.txt
doc/: transformations.mws
dumb/: dumb.cpp_dumb  resource.h_dumb  types2.h_dumb
src/: CMakeLists.txt  color-palette.cpp  color-palette.h  colorref.h  compute_worker.cpp  compute_worker.h  gradient.cpp  gradient.h  main.cpp  mandelbrot.cpp  point.h  rect.h  state-serializer.cpp  state-serializer.h  transforms.cpp  transforms.h  utilities.h
